6.oct (ws)
      - remove unused "system" text styles
      - remove page number text styles
      - replace text style number by text style name in .msc[xz] files to
        make text styles more easily extendable
      - new text property "styled". Styled text changes if the associated
        style changes.
5. oct (ws)
      - better tuplet layout (#7375)
      - fix copy&paste of tuplets
      - bb import fixes
      - capella import fixes
      - fix: some elements were not clickable before second layout pass
3. oct (ws)
      - create full measure rests on midi import
2. oct (ws)
      - added libpoppler to build system
      - remove libgsl dependency from omr build
      (lv)
      - #5637 support reading bww files: fix beam start
1. oct (ws)
      - fix #7345: opening bach-bc2 demo causes crash
      - TextStyle and Style are now implicitly shared objects to reduce
        memory resources and speedup some operations
      - move TextStyle to Style
29.sep (ws)
      - fix #7303
      - another attempt to fix #7227
      - make it easier to parallel install musescore-0.9.6.x and trunk:
         - changed install path from mscore-0.9 to mscore-1.0
         - changed "organization name" from MusE to MuseScore
         - changed "organization domain" from muse.org to musescore.org
         - changed "application name" from MuseScore to MuseScore1; this changes the
           shared files path
         - mscore-0.9.6 can be started parallel to trunk version to make
           compatibility testing easier
28.sep (ws)
      - linked parts: link ties
      - fixed #7311: dragging tied notes and removing tie gives weird result
      - fixed #7295: margin between clef and first not too narrow
      - fixed #7174: linked parts are not closed when the main score is closed
27.sep (ws)
      - fixed #7294: chord text of staff != 1 shown in wrong position
      - fixed #7292: handling of backward compatibility of mscz files