@@ -24,6 +24,7 @@
 #include "staff.h"
 #include "system.h"
 #include "measure.h"
+#include "segment.h"
 
 //---------------------------------------------------------
 //   BarLine
